[package]
name = "image-effects"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# see more keys and their definitions at: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
base64 = "0.21.4"

[dependencies.web-sys]
version = "0.3.64"
features = ["console"]